--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,8 @@
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "BucklesHusky",
-            "email": "",
-            "homepage": ""
+            "name": "Buckles Husky",
+            "homepage": "http://doggershusky.com"
         }
     ],
     "require": {
